Fixes password resets on mobile

--- a/app/assets/stylesheets/b3s/mobile.css.scss
+++ b/app/assets/stylesheets/b3s/mobile.css.scss
@@ -660,6 +660,10 @@ textarea.rich {
   }
 }
 
+section.login {
+  padding-top: 20px;
+}
+
 /* Retina display overrides */
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
   #header {
